# elroy-rs

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  OPEN_QUESTIONS.md  PARITY_MATRIX.md  README.md  REQUIREMENTS.md  REWRITE_PLAN.md  TEST_STRATEGY.md  justfile
crates/elroy-agenda/: Cargo.toml
crates/elroy-agenda/src/: lib.rs
crates/elroy-app/: Cargo.toml
crates/elroy-app/src/: lib.rs
crates/elroy-cli/: Cargo.toml
crates/elroy-cli/src/: main.rs
crates/elroy-codex/: Cargo.toml
crates/elroy-codex/src/: lib.rs
crates/elroy-config/: Cargo.toml
crates/elroy-config/src/: lib.rs
crates/elroy-core/: Cargo.toml
crates/elroy-core/src/: lib.rs
crates/elroy-db/: Cargo.toml
crates/elroy-db/migrations/: V10__deleted_due_item_tombstones.sql  V11__memory_embeddings.sql  V1__bootstrap_documents.sql  V2__derived_memory_and_agenda_tables.sql  V3__extend_bootstrap_documents_for_agenda_metadata.sql  V4__context_messages.sql  V5__agenda_checklist_counts.sql  V6__user_preferences.sql  V7__codex_sessions.sql  V8__memory_operation_tracker.sql  V9__agenda_items_nullable_is_active.sql
crates/elroy-db/src/: lib.rs
crates/elroy-feature-requests/: Cargo.toml
crates/elroy-feature-requests/src/: lib.rs
crates/elroy-llm/: Cargo.toml
crates/elroy-llm/src/: lib.rs
crates/elroy-memory/: Cargo.toml
crates/elroy-memory/src/: lib.rs
crates/elroy-self-reflection/: Cargo.toml
crates/elroy-self-reflection/src/: lib.rs
crates/elroy-tasks/: Cargo.toml
crates/elroy-tasks/src/: lib.rs
crates/elroy-tools/: Cargo.toml
crates/elroy-tools/src/: lib.rs
crates/elroy-tui/: Cargo.toml
crates/elroy-tui/src/: lib.rs
crates/elroy-user/: Cargo.toml
crates/elroy-user/src/: lib.rs
