[workspace]
members = [
    "crates/elroy-app",
    "crates/elroy-agenda",
    "crates/elroy-cli",
    "crates/elroy-config",
    "crates/elroy-core",
    "crates/elroy-codex",
    "crates/elroy-db",
    "crates/elroy-feature-requests",
    "crates/elroy-llm",
    "crates/elroy-memory",
    "crates/elroy-self-reflection",
    "crates/elroy-tools",
    "crates/elroy-tasks",
    "crates/elroy-tui",
    "crates/elroy-user",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Tom Bedore"]
rust-version = "1.89"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
