[package]
name = "elroy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
elroy-config = { path = "../elroy-config" }
elroy-llm = { path = "../elroy-llm" }
elroy-tools = { path = "../elroy-tools" }
serde_json = "1"
