[package]
name = "elroy-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
elroy-config = { path = "../elroy-config" }
elroy-llm = { path = "../elroy-llm" }
refinery = { version = "0.9", features = ["rusqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"
serde_yaml = "0.9"
