[package]
name = "elroy-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
elroy-tools = { path = "../elroy-tools" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true

[dev-dependencies]
mockito = "1"
