[package]
name = "elroy-self-reflection"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
elroy-feature-requests = { path = "../elroy-feature-requests" }
elroy-llm = { path = "../elroy-llm" }
