[package]
name = "elroy-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
elroy-agenda = { path = "../elroy-agenda" }
elroy-db = { path = "../elroy-db" }
rusqlite = { version = "0.37", features = ["bundled"] }
